# dist/swagger/swagger_output.json
@@ -158,7 +158,7 @@
         }
       }
     },
-    "/utility/billing/pageable": {
+    "/utility/bills/pageable": {
       "get": {
         "tags": [
           "UtilityBill"
@@ -211,7 +211,7 @@
         ]
       }
     },
-    "/utility/billing/{id}": {
+    "/utility/bill/{id}": {
       "get": {
         "tags": [
           "UtilityBill"
@@ -253,7 +253,7 @@
         ]
       }
     },
-    "/utility/billing": {
+    "/utility/bill": {
       "post": {
         "tags": [
           "UtilityBill"
@@ -330,7 +330,7 @@
         "properties": {
           "property_id": {
             "type": "string",
-            "example": "string"
+            "example": "uuid"
           },
           "property_name": {
             "type": "string",
@@ -349,11 +349,11 @@
           },
           "createdAt": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08 02:19:39"
           },
           "updateAt": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08 02:19:39"
           }
         },
         "xml": {
@@ -370,7 +370,7 @@
               "properties": {
                 "property_id": {
                   "type": "string",
-                  "example": "string"
+                  "example": "uuid"
                 },
                 "property_name": {
                   "type": "string",
@@ -389,11 +389,11 @@
                 },
                 "createdAt": {
                   "type": "string",
-                  "example": "date"
+                  "example": "2025-03-08 02:19:39"
                 },
                 "updateAt": {
                   "type": "string",
-                  "example": "date"
+                  "example": "2025-03-08 02:19:39"
                 }
               }
             }
@@ -426,11 +426,11 @@
             "type": "string",
             "example": "uuid"
           },
-          "utility_billing_amount": {
+          "utility_bill_amount": {
             "type": "number",
             "example": 0
           },
-          "utility_billing_type": {
+          "utility_bill_type": {
             "type": "string",
             "enum": [
               "ELECTRICITY",
@@ -438,9 +438,9 @@
               "GAS"
             ]
           },
-          "utility_billing_date": {
+          "utility_bill_date": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08"
           }
         },
         "xml": {
@@ -462,7 +462,7 @@
             "type": "number",
             "example": 0
           },
-          "utility_billing_type": {
+          "utility_bill_type": {
             "type": "string",
             "enum": [
               "ELECTRICITY",
@@ -470,17 +470,17 @@
               "GAS"
             ]
           },
-          "utility_billing_date": {
+          "utility_bill_date": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08"
           },
           "createdAt": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08 02:19:39"
           },
           "updateAt": {
             "type": "string",
-            "example": "date"
+            "example": "2025-03-08 02:19:39"
           }
         },
         "xml": {
@@ -503,11 +503,11 @@
                   "type": "string",
                   "example": "uuid"
                 },
-                "utility_billing_amount": {
+                "utility_bill_amount": {
                   "type": "number",
                   "example": 0
                 },
-                "utility_billing_type": {
+                "utility_bill_type": {
                   "type": "string",
                   "enum": [
                     "ELECTRICITY",
@@ -515,17 +515,17 @@
                     "GAS"
                   ]
                 },
-                "utility_billing_date": {
+                "utility_bill_date": {
                   "type": "string",
-                  "example": "date"
+                  "example": "2025-03-08"
                 },
                 "createdAt": {
                   "type": "string",
-                  "example": "date"
+                  "example": "2025-03-08 02:19:39"
                 },
                 "updateAt": {
                   "type": "string",
-                  "example": "date"
+                  "example": "2025-03-08 02:19:39"
                 }
               }
             }
