# swagger/dto/utilityBIllSwaggerDto.ts
@@ -1,34 +1,39 @@
 import { UtilityBillTypeEnum } from "../../enums/utilityBill";
-import { displaySwaggerEnumList } from "../../utils/helpers";
-
+import {
+  displaySwaggerEnumList,
+  getDateWithoutTime,
+  getDateWithTime,
+} from "../../utils/helpers";
 
 export const requestUtilityBillSwaggerDto = {
-    property_id: "uuid",
-    utility_billing_amount: 0,
-    utility_billing_type: { "@enum": displaySwaggerEnumList(UtilityBillTypeEnum) },
-    utility_billing_date:"date",
+  property_id: "uuid",
+  utility_bill_amount: 0,
+  utility_bill_type: { "@enum": displaySwaggerEnumList(UtilityBillTypeEnum) },
+  utility_bill_date: `${getDateWithoutTime(new Date())}`,
 };
 
 export const responseUtilityBillSwaggerDto = {
-    utility_billing_id: "uuid",
-    property_id: "uuid",
-    utility_billing_amount: 0,
-    utility_billing_type: { "@enum": displaySwaggerEnumList(UtilityBillTypeEnum) },
-    utility_billing_date:"date",
-    createdAt: "date",
-    updateAt: "date",
-  };
+  utility_billing_id: "uuid",
+  property_id: "uuid",
+  utility_billing_amount: 0,
+  utility_bill_type: { "@enum": displaySwaggerEnumList(UtilityBillTypeEnum) },
+  utility_bill_date: `${getDateWithoutTime(new Date())}`,
+  createdAt: `${getDateWithTime(new Date())}`,
+  updateAt: `${getDateWithTime(new Date())}`,
+};
 
 export const responseUtilityBillsPageableSwaggerDto = {
   properties: [
     {
-        utility_billing_id: "uuid",
-        property_id: "uuid",
-        utility_billing_amount: 0,
-        utility_billing_type: { "@enum": displaySwaggerEnumList(UtilityBillTypeEnum) },
-        utility_billing_date:"date",
-        createdAt: "date",
-        updateAt: "date",
+      utility_billing_id: "uuid",
+      property_id: "uuid",
+      utility_bill_amount: 0,
+      utility_bill_type: {
+        "@enum": displaySwaggerEnumList(UtilityBillTypeEnum),
+      },
+      utility_bill_date: `${getDateWithoutTime(new Date())}`,
+      createdAt: `${getDateWithTime(new Date())}`,
+      updateAt: `${getDateWithTime(new Date())}`,
     },
   ],
   totalItems: 0,
@@ -36,4 +41,3 @@ export const responseUtilityBillsPageableSwaggerDto = {
   pageNo: 0,
   pageSize: 0,
 };
-
